--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Kris_Labs)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Kris_Labs First_Lab/1_1.cpp First_Lab/1_2.cpp)
+add_executable(Kris_Labs First_Lab/1_8.cpp)
